--- a/Setup/SetupUI/SetupUI.csproj
+++ b/Setup/SetupUI/SetupUI.csproj
@@ -48,13 +48,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
-    <Compile Include="Events\CancelEvent.cs" />
-    <Compile Include="Events\ExitSetupEvent.cs" />
+    <Compile Include="Enums\SetupAction.cs" />
+    <Compile Include="Events\CompleteEvent.cs" />
+    <Compile Include="Events\StopInstallationEvent.cs" />
+    <Compile Include="Events\ExitInstallationEvent.cs" />
     <Compile Include="Events\EventBase.cs" />
     <Compile Include="Events\EventManager.cs" />
     <Compile Include="Events\IEventHandler.cs" />
-    <Compile Include="Events\BeginEvent.cs" />
-    <Compile Include="Events\AcceptLicenseAgreementEvent.cs" />
+    <Compile Include="Events\InstallEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -63,11 +64,16 @@
     </Compile>
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\CompleteViewModel.cs" />
     <Compile Include="ViewModels\LicenseAgreementViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SelectProductViewModel.cs" />
-    <Compile Include="ViewModels\SetupViewModel.cs" />
+    <Compile Include="ViewModels\ProgressViewModel.cs" />
+    <Compile Include="ViewModels\UnInstallationConfirmViewModel.cs" />
     <Compile Include="ViewModels\WelcomeViewModel.cs" />
+    <Compile Include="Views\CompleteView.xaml.cs">
+      <DependentUpon>CompleteView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LicenseAgreementView.xaml.cs">
       <DependentUpon>LicenseAgreementView.xaml</DependentUpon>
     </Compile>
@@ -77,8 +83,11 @@
     <Compile Include="Views\SelectProductView.xaml.cs">
       <DependentUpon>SelectProductView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\SetupView.xaml.cs">
-      <DependentUpon>SetupView.xaml</DependentUpon>
+    <Compile Include="Views\ProgressView.xaml.cs">
+      <DependentUpon>ProgressView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UnInstallationConfirmView.xaml.cs">
+      <DependentUpon>UnInstallationConfirmView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WelcomeView.xaml.cs">
       <DependentUpon>WelcomeView.xaml</DependentUpon>
@@ -88,6 +97,10 @@
     <Page Include="Views\AppStyle.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\CompleteView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\LicenseAgreementView.xaml">
       <SubType>Designer</SubType>
@@ -101,7 +114,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\SetupView.xaml">
+    <Page Include="Views\ProgressView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UnInstallationConfirmView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -128,5 +145,6 @@
   <ItemGroup>
     <Resource Include="Resources\Images\logo_128.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
