--- a/Source/ScribensMSWord/PluginScribens_Word.csproj
+++ b/Source/ScribensMSWord/PluginScribens_Word.csproj
@@ -213,6 +213,7 @@
   -->
   <ItemGroup>
     <Compile Include="AddinRibbon.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
